--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 不同於冬季一片雪白的北海道，夏季的北海道是多彩而繽紛的。<br/>到北海道賞花，<i>彩虹花田</i>及<i>薰衣草花海</i>是絕不能錯過的。
 </font>
 
+
 </center>
+<audio src="flash_and_burn.mp3" controls>
 </body>
 </html>
